@@ -621,8 +621,27 @@ setMethodS3("highlightArmCalls", "CBS", function(fit, genomeData, minFraction=0.
 
 
 
+
+setMethodS3("drawChangePoints", "CBS", function(fit, labels=FALSE, cex=0.5, col="#666666", xScale=1e-6, side=3, line=-1, xpd=TRUE, ..., verbose=FALSE) {
+  segs <- getSegments(fit, splitters=FALSE);
+  xStarts <- segs[,"start"];
+  xEnds <- segs[,"end"];
+
+  xs <- sort(unique(c(xStarts, xEnds)));
+  abline(v=xScale*xs, lty=1, col=col);
+
+  if (labels) {
+    xMids <- xScale * (xEnds + xStarts) / 2;
+    labels <- rownames(segs);
+    mtext(side=side, at=xMids, labels, line=line, cex=cex, col=col, xpd=xpd, ...);
+  }
+}, protected=TRUE)
+
+
 ############################################################################
 # HISTORY:
+# 2011-12-03
+# o Added drawChangePoints() for CBS.
 # 2011-10-23
 # o BUG FIX: highlightArmCalls() for CBS did not handle empty chromosomes.
 # 2011-10-08
